Changed rogue color to be more yellow, less orange fixed but on index page where it wouldn't create the config file properly added a check to toons to see if they're lost in limbo and warn the admin

--- a/style.css
+++ b/style.css
@@ -466,8 +466,8 @@ input[type=button].mini {
 }
 
 .toon_bk.rogue {
-	background: -webkit-linear-gradient(#ffe188, #af5c22, #522900 );
-	border: 2px solid #af5c22;
+	background: -webkit-linear-gradient(#f2ff98, #cd9825, #6c580d ); 
+	border: 2px solid #cd9825;
 }
 
 .toon_tr img, .account_online img {
